--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login Form in Bulma</title>
+    <title>Fitness & Strong</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
@@ -26,11 +26,6 @@
         border-color: #303030;
         color: #303030;
        }
-       .button :hover {
-        background-color: #303030;
-        border-color: #303030;
-        color: white;
-        }
 
       .column {
       opacity: .9;
@@ -38,9 +33,14 @@
       .notification{
       padding-top: 20px;
       padding-bottom: 30px;
-       
       }
-      
+
+      @media only screen and (max-width: 600px) {
+      img {
+      left: 10px;
+      }
+}
+
     </style>
   </head>
   <body>
