--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- W3hubs.com - Download Free Responsive Website Layout Templates designed on HTML5 CSS3,Bootstrap which are 100% Mobile friendly. w3Hubs all Layouts are responsive cross browser supported, best quality world class designs. -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -41,6 +40,7 @@
       }
 }
 
+
     </style>
   </head>
   <body>
@@ -51,7 +51,7 @@
           <div class="column is-half">
             <div class="notification is-light">
               <figure class="image container is-64x64">
-                    <a class="button is-rounded is-medium ">Login</a>
+                <img src="logo/icon.png">
               </figure>
               <div class="field">
                 <label class="label">Name</label>
