--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,7 +26,6 @@
         border-color: #303030;
         color: #303030;
        }
-
       .column {
       opacity: .9;
       }
@@ -33,14 +33,11 @@
       padding-top: 20px;
       padding-bottom: 30px;
       }
-
       @media only screen and (max-width: 600px) {
       img {
       left: 10px;
       }
 }
-
-
     </style>
   </head>
   <body>
@@ -71,6 +68,7 @@
                   </span>
                 </p>
               </div>
+              <a class="button is-rounded is-outlined is-medium">Login</a>
             </div>
           </div>
         </div>
