--- a/index.html
+++ b/index.html
@@ -1,78 +1,84 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Fitness & Strong</title>
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
-    <style type="text/css">
-      body{
-      padding: 0;
-      margin: 0;
-      }
-      .hero{
-      height: 100vh;
-      position: relative;
-      }
-      .hero.is-primary {
-       color: #fff;
-       background-color: #303030;
-      }
-      .button {
-        margin-top: 10px;
-       background-color: transparent;
-        border-color: #303030;
-        color: #303030;
-       }
-      .column {
-      opacity: .9;
-      }
-      .notification{
-      padding-top: 20px;
-      padding-bottom: 30px;
-      }
-      @media only screen and (max-width: 600px) {
-      img {
-      left: 10px;
-      }
-}
-    </style>
-  </head>
-  <body>
-    <div class="hero is-primary">
-      <div class="hero-body">
-        <h1 class="title has-text-centered is-size-2"><img style="height:60px; width:90px;" src="logo/1500PX.png" alt=""></h1>
-        <div class="columns is-centered">
-          <div class="column is-half">
-            <div class="notification is-light">
-              <figure class="image container is-64x64">
-                <img src="logo/icon.png">
-              </figure>
-              <div class="field">
-                <label class="label">Name</label>
-                <p class="control has-icons-left has-icons-right">
-                  <input class="input" type="email" placeholder="Email">
-                  <span class="icon is-small is-left">
-                  <i class="fas fa-envelope"></i>
-                  </span>
-                </p>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Fitness and Strong</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <!-- Bulma Version 0.8.x-->
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/admin.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <!-- NAV -->
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+              <a class="navbar-item" href="">
+                <img src="logo/1500PX.png" width="112" height="28">
+              </a>
+          
+            
+              <div class="navbar-end">
+                <div class="navbar-item">
+                  <div class="buttons ">
+                    <a class="button is-light" href="login.html">
+                      Log in
+                    </a>
+                  </div>
+                </div>
               </div>
-              <div class="field">
-                <label class="label">Password:</label>
-                <p class="control has-icons-left">
-                  <input class="input" type="password" placeholder="Password">
-                  <span class="icon is-small is-left">
-                  <i class="fas fa-lock"></i>
-                  </span>
-                </p>
-              </div>
-              <a class="button is-rounded is-outlined is-medium">Login</a>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+          </nav>
+<!-- NAV LEFT-->
+<aside class="menu">
+        <p class="menu-label">
+          Workouts
+        </p>
+        <ul class="menu-list">
+          <li><a>Next Workout</a></li>
+          <li><a>Previous Workouts</a></li>
+        </ul>
+        <p class="menu-label">
+          Body Composition
+        </p>
+        <ul class="menu-list">
+          <li><a>Tracking and History</a></li>
+        </ul>
+        <p class="menu-label">
+          Workout Program
+        </p>
+        <ul class="menu-list">
+          <li><a>Program Structure</a></li>
+          <li><a>Program Documents</a></li>
+          <li><a>Exercises</a></li>
+          <li><a>Progrsm Generator</a></li>
+        </ul>
+        <p class="menu-label">
+                Health and Distribution
+              </p>
+              <ul class="menu-list">
+                <li><a>Nutrition Guidlines</a></li>
+                <li><a>Sleep And Circadiam</a></li>
+                <li><a>Social Eatig</a></li>
+                <li><a>Stress Managment</a></li>
+                <li><a>Social Eatig</a></li>
+                <li><a>Supliments</a></li>
+              </ul>
+              <p class="menu-label">
+                    Support
+                  </p>
+                  <ul class="menu-list">
+                    <li><a>Knowledge base</a></li>
+                    <li><a>Settings</a></li>
+                    <li><a>Contact</a></li>
+                  </ul>
+      </aside>
+
+</body>
+
 </html>
