--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="navbar-item" href="">
-                <img src="logo/1500PX.png" width="112" height="28">
+                <img src="1500PX.png" width="112" height="28">
               </a>
           
             
