--- a/login.html
+++ b/login.html
@@ -33,17 +33,12 @@
       padding-top: 20px;
       padding-bottom: 30px;
       }
-      @media only screen and (max-width: 600px) {
-      img {
-      left: 10px;
-      }
-}
     </style>
   </head>
   <body>
     <div class="hero is-primary">
       <div class="hero-body">
-        <h1 class="title has-text-centered is-size-2"><img style="height:60px; width:90ox;" src="1500PX.png" alt=""></h1>
+        <h1 class="title has-text-centered is-size-2">Login!</h1>
         <div class="columns is-centered">
           <div class="column is-half">
             <div class="notification is-light">
@@ -68,7 +63,7 @@
                   </span>
                 </p>
               </div>
-              <a class="button is-rounded is-outlined is-medium">Login</a>
+              <a class="button is-rounded is-outlined is-medium" href="index.html">Login</a>
             </div>
           </div>
         </div>
