--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
               <ul class="menu-list">
                 <li><a>Nutrition Guidlines</a></li>
                 <li><a>Sleep And Circadiam</a></li>
-                <li><a>Social Eatig</a></li>
+                <li><a>Social Eating</a></li>
                 <li><a>Stress Managment</a></li>
-                <li><a>Social Eatig</a></li>
                 <li><a>Supliments</a></li>
               </ul>
               <p class="menu-label">
@@ -83,7 +82,7 @@
       </aside>
     
     <!-- Main -->
-    <div class="main">
+    <div class="main">   
     <h1 class="title has-text-centered ">Program Generator</h1>
     <section class="hero is-light is-bold welcome is-small">
             <div class="hero-body">
