--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="card">
                 <header class="card-header">
                     <p class="card-header-title">
-                        How old are you?
+                       1) How old are you?
                     </p>
                 </header>
                 <div class="card-content">
@@ -115,12 +115,12 @@
             <div class="card">
                 <header class="card-header">
                     <p class="card-header-title">
-                        How much do you weigh?
+                        2) How much do you weigh?
                     </p>
                 </header>
                 <div class="card-content">
                     <div class="field">
-                        <label class="label">Age:</label>
+                        <label class="label"> weight:</label>
                     </div>
                     <div class="field has-addons">
 
@@ -141,9 +141,56 @@
                     </div>
                 </div>
             </div>
-            <div class="s"  style="padding-top: 20px; border: 1px black;"><button class="button is-dark">Save and Generate program</button></div>
-
+            <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            10) Choose one exercise per list?
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <div class="field">
+                            <label class="label"> Chest Group 1:</label>
+                        </div>
+                        <div class="field has-addons" style="margin: 5px;">
+                            <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                    <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" checked>  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                            </div>
+                        </div>
+                        <div class="field has-addons" style="margin: 5px;">
+                                <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                        <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" >  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                                </div>
+                            </div>
+                            <div class="field has-addons" style="margin: 5px;">
+                                    <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                            <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" >  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="card-content">
+                            <div class="field">
+                                <label class="label"> Chest Group 2:</label>
+                            </div>
+                            <div class="field has-addons" style="margin: 5px;">
+                                <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                        <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" checked>  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                                </div>
+                            </div>
+                            <div class="field has-addons" style="margin: 5px;">
+                                    <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                            <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" >  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                                    </div>
+                                </div>
+                                <div class="field has-addons" style="margin: 5px;">
+                                        <div class="control is-expanded" style="display: flex; flex-direction: row;">
+                                                <div class="" style="border: 1px solid black; padding: 15px;"> <input type="radio" >  </div> <div class="" style="border: 1px solid black; width: 100%; padding-left:5px ;"> Bench Press <br> This is an exercise of blabla <br> link  </div>                       
+                                        </div>
+                                    </div>
+                        </div>
+                </div>
+            <div class="s"  style="padding: 20px; border: "><button class="button is-dark">Save and Generate program</button></div>
         </div>
+
 
 
     </div>
